# flask-boilerplate-2

./: .env  README.md  base.py  pyproject.toml  todo.db
auth/: forms.py  models.py  views.py
auth/templates/: login.html  register.html
core/: models.py  views.py
migrations/versions/: 0e161527fe58_.py
task/: forms.py  models.py  views.py
task/templates/: tasks.html
tests/: add_test_data.py
utils/: config.py  login.py
